--- a/COLLM/COLLM.csproj
+++ b/COLLM/COLLM.csproj
@@ -18,6 +18,7 @@
         </PackageReference>
         <PackageReference Include="Npgsql" Version="7.0.6" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+        <PackageReference Include="OpenAI" Version="1.7.2" />
         <PackageReference Include="pythonnet" Version="3.0.3" />
         <PackageReference Include="SharpToken" Version="1.2.12" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
@@ -25,6 +26,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DAL\DAL.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="CQRS\Commands\" />
     </ItemGroup>
 
 </Project>
