fix db connection

--- a/COLLM/appsettings.Development.json
+++ b/COLLM/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "PostgresDb": "User ID=admin;Password=1111;Host=localhost;Port=5432;Database=LMACO;Pooling=true;"
+    "PostgresDb": "User ID=admin;Password=1111;Host=localhost;Port=5432;Database=COLLM;Pooling=true;"
   }
 }
